# fillit

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  create_tetris.c  fillit.h  freelinkedlist.c  ft_sqrt_round.c  main.c  print_tetris.c  solver_1.c  solver_2.c
includes/: fillit.h
savemaincomments/: main.c
srcs/: create_tetris.c  freelinkedlist.c  ft_power_fillit.c  ft_sqrt_round.c  main.c  print_tetris.c  solver_1.c  solver_2.c
